--- a/village.css
+++ b/village.css
@@ -1,3 +1,33 @@
+.banner-area {
+    padding: 100px 0 200px;
+    background-color: #b0b0b0;
+    background-image: url("https://themewagon.github.io/foodfun/assets/images/banner-bg.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative
+}
+
+.banner-area .prime-color {
+    color: #ffb606
+}
+
+.banner-area .style-change {
+    font-style: normal
+}
+
+h1 {
+    color: #fff;
+    font-family: "Playfair Display", serif;
+    font-size: 60px !important;
+    font-weight: 700;
+    font-style: italic
+}
+
+h6 {
+    color: white;
+}
+
 .serve-color {
     color: #ff5722;
 }
@@ -288,4 +318,5 @@ p {
         url('images/fried-food.jpg');
     background-size: cover;
     background-position: center;
+
 }
